--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       -  name: Build Docker image
-         run: docker build -t pavithra123456789/flaskweb:latest -f ./flaskapplication/Dockerfile ./flaskapplication
+         run: docker build -t pavithra123456789/flaskweb:latest -f ./flaskapp1/Dockerfile ./flaskapp1
 
 
       - name: Push Docker image
