--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,53 @@
-name: CI-CD Pipeline for Flask
+name: Build, Deploy, and Update Flask on AKS
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    
+    env:
+      RESOURCE_GROUP_NAME: myResourceGroup         
+      AKS_CLUSTER_NAME: myAKSCluster             
+      DOCKER_IMAGE_NAME: flaskweb            
+      DOCKER_TAG: latest           
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Log in to DockerHub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      -  name: Build Docker image
-         run: docker build -t pavithra123456789/flaskweb:latest -f ./flaskapp1/Dockerfile ./flaskapp1
-
-
-      - name: Push Docker image
-        run: docker push pavithra123456789/flaskweb:latest
-
-      - name: Set up Kubectl
-        uses: azure/setup-kubectl@v3
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
         with:
-          version: v1.27.0
+          context: flaskapp1
+          file: flaskapp1/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/flaskweb:latest
 
-      - name: Deploy to Kubernetes
+      - name: Logout from Docker Hub
+        run: docker logout
+
+      - name: Set up Azure CLI
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Get AKS credentials
         run: |
-          kubectl apply -f deployment.yaml
-          kubectl apply -f service.yaml
+          az aks get-credentials --resource-group ${{ env.RESOURCE_GROUP_NAME }} --name ${{ env.AKS_CLUSTER_NAME }} --overwrite-existing
+
+      - name: Update Kubernetes deployment
+        run: |
+          sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/flaskweb:latest|g" k8s/deployment.yaml
+          kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f k8s/service.yaml
           kubectl rollout status deployment/flaskweb-demo
